package(default_visibility = ["//visibility:public"])

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

# Flatten FFmpeg binaries
genrule(
    name = "flatten_ffmpeg",
    srcs = [
        "@ffmpeg_static//:ffmpeg_bin",
        "@ffmpeg_static//:ffprobe_bin",
    ],
    outs = ["ffmpeg", "ffprobe"],
    cmd = "cp $(location @ffmpeg_static//:ffmpeg_bin) $(location ffmpeg) && cp $(location @ffmpeg_static//:ffprobe_bin) $(location ffprobe)",
)

# Layer for FFmpeg binaries
pkg_tar(
    name = "ffmpeg_layer",
    srcs = [":flatten_ffmpeg"],
    package_dir = "/usr/local/bin",
    mode = "0755",
)

# Layer for Application files
pkg_tar(
    name = "app_layer",
    srcs = [
        "config.ini",
        "models.json",
        "json_patch.py",
        "set_default_image_browser_path.py",
        "start.sh",
    ],
    package_dir = "/",
    mode = "0755",
)

# OCI Image Definition (No Docker Daemon Required)
oci_image(
    name = "comfyui_image",
    base = "@runpod_base",
    tars = [
        ":ffmpeg_layer",
        ":app_layer",
    ],
    entrypoint = ["/start.sh"],
)

# Tarball output
oci_tarball(
    name = "comfyui_image_tar",
    image = ":comfyui_image",
    repo_tags = ["ironninja33/comfyui-browser:latest"],
)
