bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "platforms", version = "0.0.10")

# Pull Base Image
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "runpod_base",
    image = "runpod/comfyui",
    tag = "latest",
    platforms = ["linux/amd64"],
)
use_repo(oci, "runpod_base")

# Static FFmpeg Binary
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ffmpeg_static",
    url = "https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
filegroup(
    name = "ffmpeg_bin",
    srcs = glob(["**/ffmpeg"]),
)
filegroup(
    name = "ffprobe_bin",
    srcs = glob(["**/ffprobe"]),
)
""",
)
